# quant-qmt-proxy

./: .gitignore  README.md  config.local.example.yml  config.test.local.example.yml  config.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  run.py  start.py
.github/workflows/: tests.yml
app/: config.py  dependencies.py  grpc_client.py  grpc_server.py  main.py
app/grpc_services/: data_grpc_service.py  health_grpc_service.py  trading_grpc_service.py
app/models/: api_requests.py  data_models.py  trading_models.py
app/routers/: data.py  health.py  trading.py  websocket.py
app/services/: contracts.py  market_data_service.py  process_health.py  redis_stream_sink.py  reference_data_service.py  runtime_health.py  trading_event_hub.py  trading_session_manager.py  ui_subscription_service.py  xtdata_gateway.py  xtdata_probe.py  xtdata_subscription_hub.py  xttrader_gateway.py
app/utils/: blocking_executor.py  exceptions.py  helpers.py  logger.py
docs/: api-reference.md  design-redis-stream-market-data.md  operations.md
proto/: data.proto  trading.proto
scripts/: generate_proto.py  install-service.ps1  watchdog.ps1
tests/: README.md  conftest.py
tests/unit/: test_bootstrap_runtime.py  test_data_subscription.py  test_grpc_api_interfaces.py  test_grpc_protocol.py  test_health_and_auth.py  test_helpers_json.py  test_interface_inventory.py  test_process_health.py  test_redis_stream_sink.py  test_rest_api_interfaces.py  test_rest_websocket.py  test_trading_grpc_service.py  test_trading_service.py  test_xtdata_gateway.py  test_xtdata_probe.py
